fix: content aside section overlaps with footer
Fixes issue - https://github.com/golang/go/issues/58134

--- a/_content/css/styles.css
+++ b/_content/css/styles.css
@@ -3644,7 +3644,7 @@ p.BackgroundQuote-body {
   flex-direction: column;
 }
 .UseCaseSubNav-anchorLinks--sticky {
-  position: fixed;
+  position: sticky;
   top: 2rem;
 }
 a.UseCase-anchorLink {
